--- a/templates/erro.html
+++ b/templates/erro.html
@@ -6,7 +6,7 @@
     <title>Erro - Portal Instável | Oráculo da Lua</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;600;700&family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../static/style.css">
     <style>
         @keyframes unstable {
             0%, 100% { transform: translate(0, 0) rotate(0deg); }
